# mcp

./: CHANGELOG.md  Cargo.toml  README.md
.gitent/: gitent.db
src/: lib.rs  main.rs
src/modules/: clipboard.rs  context.rs  diagnostics.rs  filesystem.rs  git.rs  gitent.rs  input.rs  mod.rs  network.rs  silent.rs  time.rs  transform.rs  varp_bridge.rs
